<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal|center"
        android:orientation="vertical" 
    tools:context=".MainActivity" >

        <Button
            android:id="@+id/new_game"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/new_game_str" />

        <Button
            android:id="@+id/options"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/options_str" />

        <Button
            android:id="@+id/ayuda"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/help_str" />

        <Button
            android:id="@+id/about"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/about_str" />

</LinearLayout>