<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptionsActivity" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:animateLayoutChanges="true"
        android:baselineAligned="true" >

        <RadioButton
            android:id="@+id/option_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/easy_str" />

        <RadioButton
            android:id="@+id/option_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/medium_str" />

        <RadioButton
            android:id="@+id/option_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/hard_str" />
    </RadioGroup>

    <TextView
        android:id="@+id/options_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/options_title_str"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/options_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/options_text" />

</RelativeLayout>